--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ConsumerSearch/tessel/issues"
   },
-  "homepage": "https://github.com/ConsumerSearch/tessel"
+  "homepage": "https://github.com/ConsumerSearch/tessel",
+  "dependencies": {
+    "grunt-shell": "^1.1.1",
+    "gulp": "^3.8.10"
+  }
 }
